--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,14 @@
-<h1>{{var_one}}</h1>>
+
+<h1>{{var_three}}</h1>
+<hr style="height: 2px; background-color: blueviolet">
+<h1>{{var_two | currency}}</h1>
+<h1>{{var_two | currency:'INR'}}</h1>
+
+<hr style="height: 2px; background-color: blueviolet">
+<h1>{{var_one | lowercase}}</h1>
+<hr style="height: 2px; background-color: blueviolet">
+
+<h1>{{var_one | uppercase}}</h1>
+<hr style="height: 2px; background-color: blueviolet">
+
+<h1>{{var_one | titlecase}}</h1>
