--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,20 @@
 
+
+
+<h1>{{var_five | percent}}</h1>
+<hr style="height: 2px; background-color: blueviolet">
+<h1>{{var_four | slice:1:3}}</h1>
+<h1>{{var_four | slice:1:4}}</h1>
+<h1>{{var_four | slice:1}}</h1>
+<h1>{{var_four | slice:1:-1}}</h1>
+<hr style="height: 2px; background-color: blueviolet">
 <h1>{{var_three}}</h1>
+<h1>{{var_three | date:'dd-MM-yy'}}</h1>
+<h1>{{var_three | date:'dd-MMM-yyyy'}}</h1>
+<h1>{{var_three | date:'short'}}</h1>
+<h1>{{var_three | date:'medium'}}</h1>
+<h1>{{var_three | date:'full'}}</h1>
+<h1>{{var_three | date:'shortTime'}}</h1>
 <hr style="height: 2px; background-color: blueviolet">
 <h1>{{var_two | currency}}</h1>
 <h1>{{var_two | currency:'INR'}}</h1>
