--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,11 @@
 
 
 
+<h1>{{var_seven | json}}</h1>
+<hr style="height: 2px; background-color: blueviolet">
+<h1>{{var_six | number:'2.1-1'}}</h1>
+<h1>{{var_six | number:'3.2-4'}}</h1>
+<hr style="height: 2px; background-color: blueviolet">
 <h1>{{var_five | percent}}</h1>
 <hr style="height: 2px; background-color: blueviolet">
 <h1>{{var_four | slice:1:3}}</h1>
