--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 
+<h1 style="color: green">{{"Welcome" | reverse}}</h1>
 
-
+<hr style="height: 2px; background-color: blueviolet">
 <h1>{{var_seven | json}}</h1>
 <hr style="height: 2px; background-color: blueviolet">
 <h1>{{var_six | number:'2.1-1'}}</h1>
